Article Category  and Article Section are added